--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ architecture/credentials-gs.json
 data/data.csv
 dev/ETL/input/data.csv
 dev/ETL/.ipynb_checkpoints/Spark Job - Notebook-checkpoint.ipynb
+.markdownlint.json
