--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ data/data.csv
 dev/ETL/input/data.csv
 dev/ETL/.ipynb_checkpoints/Spark Job - Notebook-checkpoint.ipynb
 .markdownlint.json
+credentials/credentials-gs.json
