add ETL advances

--- a/dev/ETL/Dockerfile
+++ b/dev/ETL/Dockerfile
@@ -6,12 +6,14 @@ LABEL maintainer="Jupyter Project <jupyter@googlegroups.com>"
 
 USER root
 RUN apt-get update && apt-get install -y \
-curl
+curl 
 
 RUN curl -O https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-377.0.0-linux-x86_64.tar.gz
 
 COPY requirements.txt .
 RUN pip install -r requirements.txt
+
+COPY gcs-connector-hadoop2-latest.jar .
 
 # Switch back to jovyan to avoid accidental container runs as root
 USER ${NB_UID}
