--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ dev/ETL/.ipynb_checkpoints/Spark Job - Notebook-checkpoint.ipynb
 .markdownlint.json
 credentials/credentials-gs.json
 dev/ETL/credentials/credentials-gs.json
+dev/ETL/gcs-connector-hadoop2-latest.jar
