--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,8 @@ dev/ETL/input/data.csv
 dev/ETL/.ipynb_checkpoints/Spark Job - Notebook-checkpoint.ipynb
 .markdownlint.json
 credentials/credentials-gs.json
+
 dev/ETL/credentials/credentials-gs.json
 dev/ETL/gcs-connector-hadoop2-latest.jar
+dev/ETL/.ipynb_checkpoints/*
+
