--- a/services/list-tweet-username/Dockerfile
+++ b/services/list-tweet-username/Dockerfile
@@ -8,7 +8,7 @@ RUN pip install -r requirements.txt
 WORKDIR /list-tweet-username
 RUN pip install -r requirements.txt
 RUN python3 -m grpc_tools.protoc -I ../protobufs --python_out=. \
-           --grpc_python_out=. ../protobufs/proto.proto
+           --grpc_python_out=. ../protobufs/clear_tweet_proto.proto
 #RUN openssl req -nodes -newkey rsa:4096 -subj /CN=marketplace \
 #                -keyout client.key -out client.csr
 #RUN --mount=type=secret,id=ca.key \
@@ -16,5 +16,5 @@ RUN python3 -m grpc_tools.protoc -I ../protobufs --python_out=. \
 #                 -set_serial 1 -out client.pem
 
 EXPOSE 5000
-ENV FLASK_APP=marketplace.py
+ENV FLASK_APP=server.py
 ENTRYPOINT [ "flask", "run", "--host=0.0.0.0"]
