--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ dev/ETL/credentials/credentials-gs.json
 dev/ETL/gcs-connector-hadoop2-latest.jar
 dev/ETL/.ipynb_checkpoints/*
 
+data/220312.csv
+data/220312-subset.csv
