--- a/services/auth/Dockerfile
+++ b/services/auth/Dockerfile
@@ -1,20 +1,18 @@
+# Execute command on ../
+# docker build . -f auth/Dockerfile -t auth
+
 FROM python
 
-RUN mkdir /auth
-COPY . /auth
+RUN mkdir /service
 
-RUN pip install -r requirements.txt	
+COPY protobufs/ /service/protobufs/
+COPY auth/ /service/auth/
 
-WORKDIR /auth
+WORKDIR /service/auth
 RUN pip install -r requirements.txt
-RUN python3 -m grpc_tools.protoc -I ../protobufs --python_out=. \
-           --grpc_python_out=. ../protobufs/auth_proto.proto
-#RUN openssl req -nodes -newkey rsa:4096 -subj /CN=marketplace \
-#                -keyout client.key -out client.csr
-#RUN --mount=type=secret,id=ca.key \
-#    openssl x509 -req -in client.csr -CA ca.pem -CAkey /run/secrets/ca.key \
-#                 -set_serial 1 -out client.pem
 
-EXPOSE 5000
-ENV FLASK_APP=server.py
-ENTRYPOINT [ "flask", "run", "--host=0.0.0.0"]
+RUN python -m grpc_tools.protoc -I ../protobufs --python_out=. \
+                ../protobufs/auth_proto.proto
+
+EXPOSE 50050
+ENTRYPOINT [ "python", "server.py" ]
