Some file corrections

--- a/services/list-tweet-random/list-tweet-random.yaml
+++ b/services/list-tweet-random/list-tweet-random.yaml
@@ -4,7 +4,7 @@ metadata:
   name: service-list-random
 spec:
   selector:
-    app: service
+    app: services
     version: one
   ports:
   - protocol: TCP
