--- a/services/admin-add-tweet/admin-add-tweet.yaml
+++ b/services/admin-add-tweet/admin-add-tweet.yaml
@@ -4,7 +4,7 @@ metadata:
   name: service-admn-add
 spec:
   selector:
-    app: service
+    app: services
     version: one
   ports:
   - protocol: TCP
