--- a/services/clear-tweet-list/clear-tweet-list.yaml
+++ b/services/clear-tweet-list/clear-tweet-list.yaml
@@ -4,7 +4,7 @@ metadata:
   name: service-clear-list
 spec:
   selector:
-    app: service
+    app: services
     version: one
   ports:
   - protocol: TCP
