--- a/services/list-tweet-language/list-tweet-language.yaml
+++ b/services/list-tweet-language/list-tweet-language.yaml
@@ -4,7 +4,7 @@ metadata:
   name: service-list-lang
 spec:
   selector:
-    app: service
+    app: services
     version: one
   ports:
   - protocol: TCP
