--- a/services/list-tweet-location/list-tweet-location.yaml
+++ b/services/list-tweet-location/list-tweet-location.yaml
@@ -4,7 +4,7 @@ metadata:
   name: service-list-loc
 spec:
   selector:
-    app: service
+    app: services
     version: one
   ports:
   - protocol: TCP
