--- a/services/list-tweet-search/list-tweet-search.yaml
+++ b/services/list-tweet-search/list-tweet-search.yaml
@@ -4,7 +4,7 @@ metadata:
   name: service-list-search
 spec:
   selector:
-    app: service
+    app: services
     version: one
   ports:
   - protocol: TCP
