--- a/services/list-tweet-username/list-tweet-user.yaml
+++ b/services/list-tweet-username/list-tweet-user.yaml
@@ -4,7 +4,7 @@ metadata:
   name: service-list-user
 spec:
   selector:
-    app: service
+    app: services
     version: one
   ports:
   - protocol: TCP
