--- a/services/admin-delete-tweet/Dockerfile
+++ b/services/admin-delete-tweet/Dockerfile
@@ -16,4 +16,4 @@ RUN python -m grpc_tools.protoc -I ../protobufs --python_out=. \
 
 EXPOSE 50052
 ENV FLASK_APP=server.py
-ENTRYPOINT [ "flask", "run", "--host=0.0.0.0"]
+ENTRYPOINT [ "flask", "run", "--host=0.0.0.0", "--port=50052"]
