--- a/services/list-tweet-location/Dockerfile
+++ b/services/list-tweet-location/Dockerfile
@@ -7,6 +7,7 @@ RUN mkdir /service
 
 COPY protobufs/ /service/protobufs/
 COPY list-tweet-location/ /service/list/
+COPY pythonBigQuery_credentials.json /service/list/
 
 WORKDIR /service/list
 RUN pip install -r requirements.txt
@@ -15,5 +16,6 @@ RUN python -m grpc_tools.protoc -I ../protobufs --grpc_python_out=. \
            ../protobufs/clear_tweet_proto.proto
 
 EXPOSE 50082
+ENV GOOGLE_ACCOUNT_KEY=./pythonBigQuery_credentials.json
 ENV FLASK_APP=server.py
 ENTRYPOINT [ "flask", "run", "--host=0.0.0.0", "--port=50082"]
