--- a/.github/workflows/services-docker-build.yml
+++ b/.github/workflows/services-docker-build.yml
@@ -22,7 +22,7 @@ jobs:
         export_default_credentials: true
     
     - name: Build LIST-TWEET-USERNAME
-      run: docker build --build-arg BIGQUERY_ACCESS_KEY=${{ secrets.SERVICE_ACCOUNT_KEY }} ./services -f list-tweet-username/Dockerfile -t list-tweet-username:latest
+      run: docker build ./services --build-arg BIGQUERY_ACCESS_KEY=${{ secrets.SERVICE_ACCOUNT_KEY }} -f services/list-tweet-username/Dockerfile -t list-tweet-username:latest
 
     - name: Configure Docker Client
       run: |-
