--- a/.github/workflows/services-docker-build.yml
+++ b/.github/workflows/services-docker-build.yml
@@ -7,13 +7,13 @@ on:
 jobs:
 
   build:
-
+    name: Build and Push to GCP
     runs-on: ubuntu-latest
     env:
       PROJECT_ID: cadeira-nuvem-2122
-
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v2
     
     - uses: google-github-actions/setup-gcloud@v0
       with:
