--- a/services/list-tweet-username/Dockerfile
+++ b/services/list-tweet-username/Dockerfile
@@ -1,20 +1,20 @@
-# docker build . -t list-tweet-username
+# Execute command on ../ (this means inside services folder)
+# Services folder has to contain a file called pythonBigQuery_credentials.json with google cloud access key
+# docker build . -f list-tweet-username/Dockerfile -t list-tweet-username
 
 FROM python
 
 RUN mkdir /service
 
-# COPY protobufs/ /service/protobufs/
-COPY . /service/list/
-
-ARG BIGQUERY_ACCESS_KEY
-RUN echo $BIGQUERY_ACCESS_KEY > /service/list/pythonBigQuery_credentials.json
+COPY protobufs/ /service/protobufs/
+COPY list-tweet-username/ /service/list/
+COPY pythonBigQuery_credentials.json /service/list/
 
 WORKDIR /service/list
 RUN pip install -r requirements.txt
 
-# RUN python -m grpc_tools.protoc -I ../protobufs --grpc_python_out=. \
-#            ../protobufs/clear_tweet_proto.proto
+RUN python -m grpc_tools.protoc -I ../protobufs --grpc_python_out=. \
+           ../protobufs/clear_tweet_proto.proto
 
 EXPOSE 50085
 ENV GOOGLE_ACCOUNT_KEY=./pythonBigQuery_credentials.json
