--- a/.github/workflows/services-docker-build.yml
+++ b/.github/workflows/services-docker-build.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./services
+        working-directory: ./services/list-tweet-username-test
     env:
       PROJECT_ID: cadeira-nuvem-2122
     steps:
@@ -25,7 +25,7 @@ jobs:
         export_default_credentials: true
     
     - name: Build LIST-TWEET-USERNAME-TEST
-      run: docker build . --build-arg BIGQUERY_ACCESS_KEY=${{ secrets.SERVICE_ACCOUNT_KEY }} -f list-tweet-username-test/Dockerfile -t list-tweet-username-test
+      run: docker build . --build-arg BIGQUERY_ACCESS_KEY=${{ secrets.SERVICE_ACCOUNT_KEY }} -t list-tweet-username-test
 
     - name: Configure Docker Client
       run: |-
