--- a/.github/workflows/services-docker-build.yml
+++ b/.github/workflows/services-docker-build.yml
@@ -28,6 +28,9 @@ jobs:
       run: |-
         gcloud auth configure-docker europe-west4-docker.pkg.dev --quiet
 
+
+
+
     - name: Build admin-add-tweet
       uses: docker/build-push-action@v2
       with:
@@ -36,6 +39,7 @@ jobs:
         push: false
         tags: admin-add-tweet
         load: true
+        build-args: [ ${{ secrets.SERVICE_ACCOUNT_KEY }} ]
 
     - name: Build admin-delete-tweet
       uses: docker/build-push-action@v2
@@ -45,6 +49,7 @@ jobs:
         push: false
         tags: admin-delete-tweet
         load: true
+        build-args: [ ${{ secrets.SERVICE_ACCOUNT_KEY }} ]
 
     - name: Build auth
       uses: docker/build-push-action@v2
@@ -72,6 +77,7 @@ jobs:
         push: false
         tags: list-tweet-language
         load: true
+        build-args: [ ${{ secrets.SERVICE_ACCOUNT_KEY }} ]
 
     - name: Build list-tweet-location
       uses: docker/build-push-action@v2
@@ -81,6 +87,7 @@ jobs:
         push: false
         tags: list-tweet-location
         load: true
+        build-args: [ ${{ secrets.SERVICE_ACCOUNT_KEY }} ]
 
     - name: Build list-tweet-random
       uses: docker/build-push-action@v2
@@ -90,6 +97,7 @@ jobs:
         push: false
         tags: list-tweet-random
         load: true
+        build-args: [ ${{ secrets.SERVICE_ACCOUNT_KEY }} ]
 
     - name: Build list-tweet-search
       uses: docker/build-push-action@v2
@@ -99,6 +107,7 @@ jobs:
         push: false
         tags: list-tweet-search
         load: true
+        build-args: [ ${{ secrets.SERVICE_ACCOUNT_KEY }} ]
 
     - name: Build list-tweet-username
       uses: docker/build-push-action@v2
@@ -108,6 +117,7 @@ jobs:
         push: false
         tags: list-tweet-username
         load: true
+        build-args: [ ${{ secrets.SERVICE_ACCOUNT_KEY }} ]
         
 
 
