--- a/.github/workflows/services-docker-build.yml
+++ b/.github/workflows/services-docker-build.yml
@@ -39,7 +39,7 @@ jobs:
         push: false
         tags: admin-add-tweet
         load: true
-        build-args: [ ${{ secrets.SERVICE_ACCOUNT_KEY }} ]
+        build-args: BIGQUERY_ACCESS_KEY=${{ secrets.SERVICE_ACCOUNT_KEY }}
 
     - name: Build admin-delete-tweet
       uses: docker/build-push-action@v2
@@ -49,7 +49,7 @@ jobs:
         push: false
         tags: admin-delete-tweet
         load: true
-        build-args: [ ${{ secrets.SERVICE_ACCOUNT_KEY }} ]
+        build-args: BIGQUERY_ACCESS_KEY=${{ secrets.SERVICE_ACCOUNT_KEY }}
 
     - name: Build auth
       uses: docker/build-push-action@v2
@@ -77,7 +77,7 @@ jobs:
         push: false
         tags: list-tweet-language
         load: true
-        build-args: [ ${{ secrets.SERVICE_ACCOUNT_KEY }} ]
+        build-args: BIGQUERY_ACCESS_KEY=${{ secrets.SERVICE_ACCOUNT_KEY }}
 
     - name: Build list-tweet-location
       uses: docker/build-push-action@v2
@@ -87,7 +87,7 @@ jobs:
         push: false
         tags: list-tweet-location
         load: true
-        build-args: [ ${{ secrets.SERVICE_ACCOUNT_KEY }} ]
+        build-args: BIGQUERY_ACCESS_KEY=${{ secrets.SERVICE_ACCOUNT_KEY }}
 
     - name: Build list-tweet-random
       uses: docker/build-push-action@v2
@@ -97,7 +97,7 @@ jobs:
         push: false
         tags: list-tweet-random
         load: true
-        build-args: [ ${{ secrets.SERVICE_ACCOUNT_KEY }} ]
+        build-args: BIGQUERY_ACCESS_KEY=${{ secrets.SERVICE_ACCOUNT_KEY }}
 
     - name: Build list-tweet-search
       uses: docker/build-push-action@v2
@@ -107,7 +107,7 @@ jobs:
         push: false
         tags: list-tweet-search
         load: true
-        build-args: [ ${{ secrets.SERVICE_ACCOUNT_KEY }} ]
+        build-args: BIGQUERY_ACCESS_KEY=${{ secrets.SERVICE_ACCOUNT_KEY }}
 
     - name: Build list-tweet-username
       uses: docker/build-push-action@v2
@@ -117,7 +117,7 @@ jobs:
         push: false
         tags: list-tweet-username
         load: true
-        build-args: [ ${{ secrets.SERVICE_ACCOUNT_KEY }} ]
+        build-args: BIGQUERY_ACCESS_KEY=${{ secrets.SERVICE_ACCOUNT_KEY }}
         
 
 
