--- a/services/services-deployment-admin.yaml
+++ b/services/services-deployment-admin.yaml
@@ -34,7 +34,7 @@ spec:
         - name: bigquery-key
           mountPath: /var/secrets/bigquery
         env:
-        - name: GOOGLE_ACCOUNT_KEY_PATH
+        - name: GOOGLE_ACCOUNT_KEY
           value: /var/secrets/bigquery/pythonBigQuery_credentials.json
       volumes:
         - name: bigquery-key
@@ -77,7 +77,7 @@ spec:
         - name: bigquery-key
           mountPath: /var/secrets/bigquery
         env:
-        - name: GOOGLE_ACCOUNT_KEY_PATH
+        - name: GOOGLE_ACCOUNT_KEY
           value: /var/secrets/bigquery/pythonBigQuery_credentials.json
       volumes:
         - name: bigquery-key
@@ -116,3 +116,13 @@ spec:
       containers:
       - name: auth
         image: "europe-west4-docker.pkg.dev/cadeira-nuvem-2122/services/auth:latest"
+        volumeMounts:
+        - name: bigquery-key
+          mountPath: /var/secrets/bigquery
+        env:
+        - name: GOOGLE_ACCOUNT_KEY
+          value: /var/secrets/bigquery/pythonBigQuery_credentials.json
+      volumes:
+        - name: bigquery-key
+          secret:
+            secretName: bigquery-key
