--- a/services/services-deployment-admin.yaml
+++ b/services/services-deployment-admin.yaml
@@ -21,6 +21,11 @@ spec:
       app: admin-add
       version: one
   replicas: 3
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
   template:
     metadata:
       labels:
@@ -66,6 +71,11 @@ spec:
       app: admin-delete
       version: one
   replicas: 3
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
   template:
     metadata:
       labels:
@@ -111,6 +121,11 @@ spec:
       app: auth
       version: one
   replicas: 3
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
   template:
     metadata:
       labels:
