--- a/serverless/ci_cd/utils/deploy.cloudbuild.yaml
+++ b/serverless/ci_cd/utils/deploy.cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
-  - name: 'gcr.io/google.com/cloud-builders/docker'
+  - name: 'gcr.io/cloud-builders/docker'
     entrypoint: bash
     args:
     - '-c'
