--- a/serverless/ci_cd/utils/deploy.cloudbuild.yaml
+++ b/serverless/ci_cd/utils/deploy.cloudbuild.yaml
@@ -1,12 +1,9 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
   env: 
-    - "TAG_NAME=${TAG_NAME_1}"
+    - "TAG_NAME=utils-build"
   args: [ 'build', '-t', '${LOCATION}-docker.pkg.dev/${PROJECT_ID}/utils/python-utils', 'serverless/ci_cd/utils/.' ]
 
 images: ['${LOCATION}-docker.pkg.dev/${PROJECT_ID}/utils/python-utils']
 
 timeout: 3600s
-
-substitutions:
-  TAG_NAME_1: utils-build
