--- a/serverless/functions/ci_cd/unit_tests.cloudbuild.yaml
+++ b/serverless/functions/ci_cd/unit_tests.cloudbuild.yaml
@@ -1,2 +1,10 @@
 steps:
-  - name: 'europe-west1'
+  - name: '${LOCATION}-docker.pkg.dev/${PROJECT}/utils/python-utils'
+    args: [
+      '-m', 'unittest', 'serverless/functions/admin_add_tweet/tests/test_main.py']
+    id: 'unit-tests-admin-add-tweet'
+    waitFor: ['-']
+
+substitutions:
+  TAG_NAME: unittests
+  TRIGGER_NAME: cf-unittests
