unit tests cicd first function

--- a/serverless/ci_cd/commit.cloudbuild.yaml
+++ b/serverless/ci_cd/commit.cloudbuild.yaml
@@ -6,6 +6,7 @@ steps:
       'builds',
       'submit',
       '--config=serverless/functions/ci_cd/unit_tests.cloudbuild.yaml',
+      '--substitutions=_TRIGGER_NAME="cf-unittests"'
     ]
     id: 'unittests'
     waitFor: ['-']
