unit tests cicd first function

--- a/serverless/ci_cd/commit.cloudbuild.yaml
+++ b/serverless/ci_cd/commit.cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
       'builds',
       'submit',
       '--config=serverless/functions/ci_cd/unit_tests.cloudbuild.yaml',
-      '--substitutions=_TRIGGER_NAME="cf-unittests"'
+      '--substitutions=_TRIGGER_NAME="cf-unittests",_PROJECT=${PROJECT},_LOCATION=${LOCATION}'
     ]
     id: 'unittests'
     waitFor: ['-']
